# kernel

./: .gitignore  Makefile
boot/: 32bit_print.asm  bootsect.asm  disk.asm  gdt.asm  print.asm  print_hex.asm  switch_pm.asm
kernel/: kernel.c
kernel-rs/: Cargo.toml  x86_64-os.json
kernel-rs/.cargo/: config.toml
kernel-rs/kernel/: Cargo.toml
kernel-rs/kernel/src/: framebuffer.rs  lib.rs  main.rs  qemu.rs  serial.rs
kernel-rs/src/: main.rs  vga.rs
