cargo-features = ["edition2024"]

[package]
name = "kernel-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bootloader = "0.9.23"
volatile = "0.2.7"
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]


[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
