[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = { workspace = true }
spin = { workspace = true }
lazy_static = { workspace = true }
volatile = { workspace = true }
conquer-once = { workspace = true }
noto-sans-mono-bitmap = { workspace = true }
x86_64 = { workspace = true }
uart_16550 = { workspace = true }
